<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.developer.sascha.social_brothers_challenge.SettingsActivity$CardPreferenceFragment"
        android:icon="@drawable/ic_action_card"
        android:title="@string/title_card" />

    <header
        android:fragment="com.developer.sascha.social_brothers_challenge.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.developer.sascha.social_brothers_challenge.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
